post characters resource
